--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/fortify": "^1.8",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3"
     },
