--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^3.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kjmtrue/vietnam-zone": "^1.0",
         "laravel/fortify": "^1.8",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
