--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "chart.js": "^3.8.0",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.6.2"
     }
