--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,10 @@ services:
       - "8089:80"
   db:
     platform: linux/x86_64
-    image: mysql:5.7
+    image: mysql:8
     container_name: mysql-db
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: OnlineStore
+      MYSQL_DATABASE: ShoeStore
     ports:
       - 3306:3306
