--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "chart.js": "^3.8.0",
+        "vue-loading-overlay": "^3.4.2",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.6.2"
     }
